--- a/README.html
+++ b/README.html
@@ -318,7 +318,7 @@ abundance with Salmon. Additionally, this step includes identification of the in
 </div>
 <div id="visualize-prediction-of-70-fold" class="section level4">
 <h4>Visualize prediction of 70-fold</h4>
-<p><a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step6_visualize_predictions.html">70-fold-cv markdown</a></p>
+<p><a href="https://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step6_visualize_predictions.html">70-fold-cv markdown</a></p>
 </div>
 </div>
 </div>
