results from LGEP vs. EW using only OK, ridge, lasso

--- a/README.html
+++ b/README.html
@@ -295,12 +295,19 @@ abundance with Salmon. Additionally, this step includes identification of the in
 </div>
 <div id="step-4---prediction-of-ew-families-with-lgep" class="section level3">
 <h3>Step 4 - Prediction of EW families with LGEP</h3>
+<div id="conduct-prediction-on-ew" class="section level4">
+<h4>Conduct prediction on EW</h4>
+<p>Family mean estimates of counts and snps were used for prediction with OmicKriging and glmnet (lasso/ridge): <a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step3_lgep.vs.ew_pred.v2.html">EW predictions</a></p>
+</div>
+<div id="the-below-part-is-defunct-the-scripts-are-still-there-but-are-not-used." class="section level4">
+<h4>**The below part is defunct, the scripts are still there but are not used.</h4>
 <p>Estimate anova scores for features using LGEP and then conduct prediction on EW</p>
+</div>
 <div id="generate-anova-scores-using-lgep-as-training" class="section level4">
 <h4>Generate anova scores using LGEP as training</h4>
 <p>Utilizing the biological replicate data sets, ANOVA scores were estimated for each feature (snp/transcript): <a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step2_lgep.vs.ew_anova.html">LGEP_ANOVA</a></p>
 </div>
-<div id="conduct-prediction-on-ew" class="section level4">
+<div id="conduct-prediction-on-ew-1" class="section level4">
 <h4>Conduct prediction on EW</h4>
 <p>Family mean estimates of counts and snps were used for prediction with OmicKriging and glmnet (lasso/ridge): <a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step3_lgep.vs.ew_pred.html">EW predictions</a></p>
 </div>
