--- a/README.html
+++ b/README.html
@@ -310,20 +310,9 @@ abundance with Salmon. Additionally, this step includes identification of the in
 <p>Family mean estimates of counts and snps were used for prediction with OmicKriging and glmnet (lasso/ridge):</p>
 <p><a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step3_lgep.vs.ew_pred.v2.html">EW predictions</a></p>
 </div>
-<div id="the-below-part-is-defunct-the-scripts-are-still-there-but-are-not-used." class="section level4">
-<h4>**The below part is defunct, the scripts are still there but are not used.</h4>
-<p>Estimate anova scores for features using LGEP and then conduct prediction on EW</p>
-<p>#### Generate anova scores using LGEP as training</p>
-<p>Utilizing the biological replicate data sets, ANOVA scores were estimated for each feature (snp/transcript):</p>
-<p><a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step2_lgep.vs.ew_anova.html">LGEP_ANOVA</a></p>
-<p>#### Conduct prediction on EW</p>
-<p>Family mean estimates of counts and snps were used for prediction with OmicKriging and glmnet (lasso/ridge):</p>
-<p><a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step3_lgep.vs.ew_pred.html">EW predictions</a></p>
-</div>
 </div>
 <div id="step-5---prediction-of-70-fold-cv" class="section level3">
 <h3>Step 5 - Prediction of 70-fold CV</h3>
-<p>First construct the 70 test groups, estimate ANOVA scores, and then conduct predictions</p>
 <div id="construct-70-test-groups" class="section level4">
 <h4>Construct 70 test groups</h4>
 <p>Instead of predicting across batch, here we split the complete data set into a 7-fold CV (repeated 10 times). The cv groups were split so that each test fold had individuals which were spread across the phenotypic range:</p>
@@ -337,14 +326,6 @@ abundance with Salmon. Additionally, this step includes identification of the in
 <h4>Visualize predictions</h4>
 <p><a href="https://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step6_visualize_predictions.v2.html">70 Fold CV visualization</a></p>
 </div>
-<div id="the-below-part-is-defunct-the-scripts-are-still-there-but-are-not-used.-1" class="section level4">
-<h4>**The below part is defunct, the scripts are still there but are not used.</h4>
-<p>#### Conduct prediction on each of the test folds across pvals</p>
-<p>Just as when predicting on the EW families, predictions were carried out for each of the 70 unique test groups:</p>
-<p><a href="https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step5_cv.70.predictions.Rmd">predict 70-fold</a></p>
-<p>#### Visualize prediction of 70-fold</p>
-<p><a href="https://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step6_visualize_predictions.html">70-fold-cv markdown</a></p>
-</div>
 </div>
 <div id="step-6---prediction-using-loo" class="section level3">
 <h3>Step 6 - Prediction using LOO</h3>
@@ -355,6 +336,24 @@ abundance with Salmon. Additionally, this step includes identification of the in
 <p><a href="https://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step7_visualize_predictions.html">LOO markdown</a></p>
 </div>
 </div>
+</div>
+<div id="section" class="section level2">
+<h2></h2>
+<p>**The below part is defunct, the scripts are still there but are not used.</p>
+<p>Estimate anova scores for features using LGEP and then conduct prediction on EW</p>
+<p>#### Generate anova scores using LGEP as training</p>
+<p>Utilizing the biological replicate data sets, ANOVA scores were estimated for each feature (snp/transcript):</p>
+<p><a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step2_lgep.vs.ew_anova.html">LGEP_ANOVA</a></p>
+<p>#### Conduct prediction on EW</p>
+<p>Family mean estimates of counts and snps were used for prediction with OmicKriging and glmnet (lasso/ridge):</p>
+<p><a href="http://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step3_lgep.vs.ew_pred.html">EW predictions</a></p>
+<p><strong>The below part is defunct, the scripts are still there but are not used.</strong></p>
+<p>First construct the 70 test groups, estimate ANOVA scores, and then conduct predictions</p>
+<p>#### Conduct prediction on each of the test folds across pvals</p>
+<p>Just as when predicting on the EW families, predictions were carried out for each of the 70 unique test groups:</p>
+<p><a href="https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step5_cv.70.predictions.Rmd">predict 70-fold</a></p>
+<p>#### Visualize prediction of 70-fold</p>
+<p><a href="https://htmlpreview.github.com/?https://github.com/arfesta/Breeding-Value-Prediction/blob/master/disk6directory/analyses/step4.prediction/step6_visualize_predictions.html">70-fold-cv markdown</a></p>
 </div>
 </div>
 
